blueprint/jupyterhub/jupyter-ingress.yml
---
# Jupyter Hub Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub-ingress
  labels:
    name: jupyterhub-ingress
  annotations: 
     ingress.kubernetes.io/hsts: "true"
     ingress.kubernetes.io/hsts-preload: "true"
     ingress.kubernetes.io/hsts-include-subdomains: "true"
     ingress.kubernetes.io/hsts-max-age: "100"
     ingress.kubernetes.io/rewrite-target: /
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"     
     nginx.ingress.kubernetes.io/configuration-snippet: |
       more_set_headers "X-Frame-Options: SAMEORIGIN";
       more_set_headers "X-XSS-protection: 1";
       more_set_headers "X-Content-Type-Options: nosniff";
       more_set_headers "Access-Control-Allow-Origin: accept, content-type, authorization";
       more_set_headers "Strict-Transport-Security: max-age=31536000; includeSubDomains; always";
spec:
  # tls:
  # - hosts:
      # - jupyterhub.bigdata.blueprint.lab
    # secretName: dc1-tls-secret
  rules:
  - host: jupyterhub.bigdata.blueprint.lab
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: jupyterhub-service
            port:
              number: 8000
